--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,3 @@
-// General
 :root {
   --main-color: #be9c79;
   --black: #333;
@@ -17,8 +16,12 @@
   box-sizing: border-box;
   outline: none;
   border: none;
-
   font-family: "Nunito", sans-serif;
+}
+
+*::-moz-selection {
+  background-color: var(--main-color);
+  color: var(--white);
 }
 
 *::selection {
@@ -40,7 +43,7 @@ body {
 
 a {
   text-decoration: none;
-  color: (var(--black));
+  color: var(--black);
 }
 
 ul {
@@ -79,11 +82,13 @@ h6 {
   display: flex;
   justify-content: center;
   padding-bottom: 2rem;
-  h3 {
-    font-size: 5rem;
-  }
 }
-// Navbar
+#menu-header h3,
+#gallery-header h3,
+#team-header h3 {
+  font-size: 5rem;
+}
+
 .nav {
   background-color: var(--beige-color);
   display: flex;
@@ -95,25 +100,19 @@ h6 {
   width: 100%;
   padding: 5px;
   font-size: 1.8rem;
-  img {
-    height: 50px;
-  }
-  .links {
-    display: flex;
-    li {
-      padding: 10px;
-    }
-  }
+}
+.nav img {
+  height: 50px;
+}
+.nav .links {
+  display: flex;
+}
+.nav .links li {
+  padding: 10px;
 }
 
-// Header
 header {
-  background: linear-gradient(
-      to right,
-      rgba(245, 246, 252, 0.1),
-      rgba(248, 245, 241, 0.9)
-    ),
-    url("../../images/home-bg.jpg");
+  background: linear-gradient(to right, rgba(245, 246, 252, 0.1), rgba(248, 245, 241, 0.9)), url("../../images/home-bg.jpg");
   height: 650px;
   width: 100%;
   background-size: cover;
@@ -122,139 +121,128 @@ header {
   align-items: center;
   flex-direction: row-reverse;
   margin-bottom: 3rem;
-  h1 {
-    font-size: 6rem;
-  }
-  p {
-    padding: 1rem 0;
-    font-size: 1.6rem;
-    line-height: 2;
-  }
-
-  .home-text {
-    text-align: center;
-    width: 60rem;
-    margin-right: 20rem;
-  }
 }
-
-// About us
+header h1 {
+  font-size: 6rem;
+}
+header p {
+  padding: 1rem 0;
+  font-size: 1.6rem;
+  line-height: 2;
+}
+header .home-text {
+  text-align: center;
+  width: 60rem;
+  margin-right: 20rem;
+}
 
 #about {
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: auto;
-  h2 {
-    font-size: 3rem;
-  }
-  p {
-    padding: 2rem 0;
-    font-size: 1.6rem;
-    line-height: 2;
-    width: 55rem;
-  }
-  img {
-    height: 50rem;
-  }
 }
-
-//Spacer logo
+#about h2 {
+  font-size: 3rem;
+}
+#about p {
+  padding: 2rem 0;
+  font-size: 1.6rem;
+  line-height: 2;
+  width: 55rem;
+}
+#about img {
+  height: 50rem;
+}
 
 .spacer {
   display: flex;
   justify-content: center;
   padding: 5rem 0;
-  img {
-    height: 5rem;
-  }
+}
+.spacer img {
+  height: 5rem;
 }
 
-// Menu
-#menu {
-  #menu-items {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
-    .menu-variety {
-      display: flex;
-      flex-direction: column;
-      width: 25rem;
-      align-items: center;
-      img {
-        width: 20rem;
-      }
-      h5 {
-        font-size: 2rem;
-        padding: 1rem 0;
-        text-align: center;
-      }
-      p {
-        text-align: center;
-        font-size: 1.3rem;
-      }
-    }
-  }
+#menu #menu-items {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: stretch;
+}
+#menu #menu-items .menu-variety {
+  display: flex;
+  flex-direction: column;
+  width: 25rem;
+  align-items: center;
+}
+#menu #menu-items .menu-variety img {
+  width: 20rem;
+}
+#menu #menu-items .menu-variety h5 {
+  font-size: 2rem;
+  padding: 1rem 0;
+  text-align: center;
+}
+#menu #menu-items .menu-variety p {
+  text-align: center;
+  font-size: 1.3rem;
 }
 
 #menu-pics {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
-  h6 {
-    text-align: center;
-    font-size: 2rem;
-    padding-bottom: 2rem;
-  }
 }
-.menu-items {
-  img {
-    width: 25rem;
-  }
+#menu-pics h6 {
+  text-align: center;
+  font-size: 2rem;
+  padding-bottom: 2rem;
 }
 
-// Gallery
+.menu-items img {
+  width: 25rem;
+}
 
 #gallery-images {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
   align-items: center;
-  img {
-    padding: 1.8rem 0;
-    width: 40rem;
-    transition: transform 0.2s;
-  }
-  img:hover {
-    transform: scale(1.2);
-  }
+}
+#gallery-images img {
+  padding: 1.8rem 0;
+  width: 40rem;
+  transition: transform 0.2s;
+}
+#gallery-images img:hover {
+  transform: scale(1.2);
 }
 
-// Team
 #team {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 #team-container {
   width: 35rem;
   text-align: center;
-  img {
-    height: 35rem;
-  }
-  h4 {
-    font-size: 2rem;
-  }
-  #job {
-    font-size: 1.6rem;
-    font-style: italic;
-    padding: 0.5rem;
-  }
-  #info {
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
-  }
+}
+#team-container img {
+  height: 35rem;
+}
+#team-container h4 {
+  font-size: 2rem;
+}
+#team-container #job {
+  font-size: 1.6rem;
+  font-style: italic;
+  padding: 0.5rem;
+}
+#team-container #info {
+  font-size: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 .move-btn {
@@ -265,41 +253,40 @@ header {
   color: var(--white);
 }
 
-// Contact
 #booking {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  img {
-    height: 50rem;
-  }
-  form {
-    display: flex;
-    flex-direction: column;
-    border: var(--border);
-    padding: 4rem 6rem;
-    align-items: center;
-    h4 {
-      font-size: 4rem;
-      padding-bottom: 2rem;
-    }
-    .fInput {
-      margin: 1rem 0;
-      padding: 1.5rem;
-      width: 35rem;
-    }
-    #submit-btn {
-      width: 12rem;
-      margin-top: 2rem;
-    }
-  }
+}
+#booking img {
+  height: 50rem;
+}
+#booking form {
+  display: flex;
+  flex-direction: column;
+  border: var(--border);
+  padding: 4rem 6rem;
+  align-items: center;
+}
+#booking form h4 {
+  font-size: 4rem;
+  padding-bottom: 2rem;
+}
+#booking form .fInput {
+  margin: 1rem 0;
+  padding: 1.5rem;
+  width: 35rem;
+}
+#booking form #submit-btn {
+  width: 12rem;
+  margin-top: 2rem;
 }
 
 #info {
   display: flex;
   justify-content: space-evenly;
   margin-top: 10rem;
-  i {
-    height: 5rem;
-  }
 }
+#info i {
+  height: 5rem;
+}/*# sourceMappingURL=style.css.map */
