--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -83,6 +83,10 @@ h6 {
     font-size: 5rem;
   }
 }
+#home a,
+#about a {
+  color: var(--white);
+}
 // Navbar
 .nav {
   background-color: var(--beige-color);
@@ -145,6 +149,7 @@ header {
   justify-content: space-around;
   align-items: center;
   height: auto;
+  padding: 0 2rem;
   h2 {
     font-size: 3rem;
   }
@@ -173,9 +178,10 @@ header {
 // Menu
 #menu {
   #menu-items {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: space-evenly;
-    align-items: stretch;
+
     .menu-variety {
       display: flex;
       flex-direction: column;
@@ -298,8 +304,187 @@ header {
 #info {
   display: flex;
   justify-content: space-evenly;
+  align-items: flex-start;
   margin-top: 10rem;
-  i {
-    height: 5rem;
+
+  .info-items,
+  .mapouter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-icon {
+    color: var(--main-color);
+  }
+
+  h6 {
+    font-size: 1.6rem;
+    padding: 1rem 0;
+  }
+  p {
+    font-size: 1.4rem;
+  }
+}
+
+// Footer
+footer {
+  font-size: 1.3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 0;
+
+  #footer-container {
+    display: flex;
+    justify-content: center;
+    border-top: var(--border);
+    width: 90rem;
+    p {
+      margin-top: 2rem;
+      a {
+        color: var(--main-color);
+      }
+      a:hover {
+        color: var(--black);
+      }
+    }
+  }
+}
+
+// media-queries
+@media (max-width: 1230px) {
+  html {
+    font-size: 60%;
+  }
+  #gallery img {
+    width: 35rem;
+  }
+}
+@media (max-width: 1030px) {
+  html {
+    font-size: 55%;
+  }
+  #gallery img {
+    width: 35rem;
+  }
+}
+@media (max-width: 950px) {
+  #gallery-images {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  #menu-btn {
+    display: inline-block;
+    transition: 0.2s linear;
+  }
+
+  #menu-btn.fa-times {
+    transform: rotate(180deg);
+  }
+
+  .header .flex .navbar {
+    position: absolute;
+    top: 99%;
+    left: 0;
+    right: 0;
+    background-color: var(--white);
+    border-top: var(--border);
+    border-bottom: var(--border);
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: 0.2s linear;
+  }
+
+  .header .flex .navbar.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+
+  .header .flex .navbar a {
+    display: block;
+    margin: 2rem;
+  }
+
+  .home-bg {
+    background-position: left;
+  }
+
+  .home-bg .home {
+    justify-content: center;
+  }
+
+  .home-bg .home .content h3 {
+    font-size: 4rem;
+  }
+  #home {
+    .home-text {
+      margin: auto;
+    }
+  }
+
+  #about {
+    h2 {
+      font-size: 2.5rem;
+    }
+    p {
+      width: auto;
+    }
+    img {
+      width: 40rem;
+    }
+  }
+
+  #menu-items {
+    align-items: stretch;
+  }
+}
+@media (max-width: 650px) {
+  #about {
+    flex-direction: column;
+    text-align: center;
+    p {
+      width: auto;
+    }
+  }
+  #menu {
+    #menu-items,
+    #menu-pics {
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+    }
+  }
+
+  #gallery-images {
+    grid-template-columns: 1fr;
+  }
+  #booking {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .heading img {
+    height: 3rem;
+  }
+
+  .heading h3 {
+    font-size: 3rem;
+  }
+
+  #menu {
+    #menu-items {
+      grid-template-columns: 1fr;
+      justify-items: center;
+    }
+  }
+
+  #gallery-images,
+  #menu-pics {
+    grid-template-columns: 1fr;
   }
 }
