--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -249,7 +249,7 @@ header .home-text {
   font-style: italic;
   padding: 0.5rem;
 }
-#team-container #info {
+#team-container #description {
   font-size: 1.5rem;
   padding-bottom: 1rem;
 }
