--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -261,7 +261,7 @@ header {
     font-style: italic;
     padding: 0.5rem;
   }
-  #info {
+  #description {
     font-size: 1.5rem;
     padding-bottom: 1rem;
   }
